tests/grammar/types/args/schema_types_err_02_schema/stderr.golden
error[E2G22]: TypeError
  --> ${CWD}/main.k:13:19
   |
13 | x1 = CheckArgType(_x) {}
   |                   ^ expected Person, got Person
   |